# coursework16.03.25

./: .flake8  README.md  pyproject.toml
scr/: api_client.py  main.py  storage.py  vacancy.py
tests/: test_coursework.py
